[tool.poetry]
name = "fastly-bill-breakdown"
version = "0.1.0"
description = ""
authors = ["Tobias Macey"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.13.3"
pydantic = "^1.5.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
